--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <script src="script.js" defer></script>
 
-    <button class="btn btn_1" onpointermove="press(this)">Нет</button>
-    <button class="btn btn_2" onmousedown="yes()">Да</button>
+    <div class="container">
+      <button class="btn btn_2" onmousedown="yes()">Да</button>
+      <button class="btn btn_1" onpointermove="press(this)">Нет</button>
+    </div>
   </body>
 </html>
